--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -159,8 +159,19 @@ form .btn-default.focus, .btn-default:focus {
 }
 
 .gallery {
+    width: 100%;
+	padding-bottom: 100%;
     position: relative;
-    padding: 15px 0;
+    margin: 10px 0;
+}
+
+.gallery img {
+    position: absolute;
+	top: 0; 
+	bottom: 0; 
+	left: 0; 
+	right: 0;
+	min-height: 80%;
 }
 
 .thumbnail .caption {
